bynkc/tests/fixtures/positive/250_http_cors/src/api.bynk
context api

-- A CORS-enabled HTTP service: the browser may call it cross-origin from the
-- listed origins. The compiler synthesises an `OPTIONS` preflight for these
-- routes and stamps `Access-Control-*` on every response.
service api from http {
  cors {
    origins: ["https://app.example.com"],
    credentials: false,
    maxAge: 1.hours,
  }

  on GET("/ping") () -> Effect[HttpResult[String]] by v: Visitor {
    Ok("pong")
  }

  on GET("/items/:id") (id: String) -> Effect[HttpResult[String]] by v: Visitor {
    Ok(id)
  }
}
